force-app/main/default/objects/TLG_Task__c/fields/TLG_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>TLG_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>