force-app/main/default/objects/TLG_Task__c/fields/TLG_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>TLG_Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Tasks (Assign To)</relationshipLabel>
    <relationshipName>Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>