force-app/main/default/objects/TLG_Task__c/fields/TLG_Board__c.field-meta.xml
<CustomField>
    <fullName>TLG_Board__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board</label>
    <referenceTo>TLG_Team__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>