force-app/main/default/objects/TLG_Task__c/fields/TLG_Case__c.field-meta.xml
<CustomField>
    <fullName>TLG_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case</relationshipLabel>
    <relationshipName>TLG_Case</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>