force-app/main/default/objects/TLG_Task__c/fields/TLG_Category__c.field-meta.xml
<CustomField>
    <fullName>TLG_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Client Coordination</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Review &amp; Sign-Off</fullName>
            </value>
            <value>
                <fullName>Training / Handoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>