force-app/main/default/objects/TLG_Task__c/fields/TLG_Comments__c.field-meta.xml
<CustomField>
    <fullName>TLG_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>