force-app/main/default/objects/TLG_Task__c/fields/TLG_Contact__c.field-meta.xml
<CustomField>
    <fullName>TLG_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>