force-app/main/default/objects/TLG_Task__c/fields/TLG_Detail__c.field-meta.xml
<CustomField>
    <fullName>TLG_Detail__c</fullName>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>