force-app/main/default/objects/TLG_Task__c/fields/TLG_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>TLG_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>