force-app/main/default/objects/TLG_Task__c/fields/TLG_Execute_Alert__c.field-meta.xml
<CustomField>
    <fullName>TLG_Execute_Alert__c</fullName>
    <formula>ISPICKVAL( TLG_Status__c , &apos;Sent to AM/Sent to Customer&apos; )  &amp;&amp; (TODAY() - DATEVALUE(LastModifiedDate)) = 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ISPICKVAL( TLG_Status__c , &apos;Returned to AM&apos;) &amp;&amp; (TODAY() - DATEVALUE(LastModifiedDate)) &gt;= 7</inlineHelpText>
    <label>Execute Alert</label>
    <type>Checkbox</type>
</CustomField>