force-app/main/default/objects/TLG_Task__c/fields/TLG_IsContributorCreated__c.field-meta.xml
<CustomField>
    <fullName>TLG_IsContributorCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsContributorCreated</label>
    <type>Checkbox</type>
</CustomField>