force-app/main/default/objects/TLG_Task__c/fields/TLG_Lead__c.field-meta.xml
<CustomField>
    <fullName>TLG_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>