force-app/main/default/objects/TLG_Task__c/fields/TLG_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>TLG_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>