force-app/main/default/objects/TLG_Task__c/fields/TLG_Team__c.field-meta.xml
<CustomField>
    <fullName>TLG_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>TLG_Team__c</referenceTo>
    <relationshipLabel>Tasks (Team)</relationshipLabel>
    <relationshipName>Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>