force-app/main/default/objects/TLG_Task__c/fields/Total_KB_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_KB_Tasks__c</fullName>
    <label>Total KB Tasks</label>
    <summaryForeignKey>TLG_TaskFeed__c.TLG_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>